Delete sample endpoint
